force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Company Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Internal - Active</fullName>
            </value>
            <value>
                <fullName>kai Account</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
                <isActive>false</isActive>
                <label>Obsolete</label>
            </value>
            <value>
                <fullName>Opened</fullName>
                <isActive>false</isActive>
                <label>Opened</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>uLab Account</fullName>
            </value>
            <value>
                <fullName>uLab Child Account</fullName>
            </value>
            <value>
                <fullName>uLab Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>