force-app/main/default/objects/Account/fields/Date_Added_to_Kai__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Kai__c</fullName>
    <label>Date Added to Kai</label>
    <type>Date</type>
</CustomField>