force-app/main/default/objects/Account/fields/Kai_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>Kai_Acct_Number__c</fullName>
    <externalId>true</externalId>
    <label>Kai Acct Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>