force-app/main/default/objects/Account/fields/KAI_Approved__c.field-meta.xml
<CustomField>
    <fullName>KAI_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAI Approved</label>
    <type>Checkbox</type>
</CustomField>