force-app/main/default/objects/Account/fields/KAI_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>KAI_Onboarding_Status__c</fullName>
    <label>KAI Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>