force-app/main/default/objects/Account/fields/KAI_Rejected__c.field-meta.xml
<CustomField>
    <fullName>KAI_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAI Rejected</label>
    <type>Checkbox</type>
</CustomField>