force-app/main/default/objects/Account/listViews/KAI_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>KAI_Pending_Approval</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>uLab_Acct_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KAI_Onboarding_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>KAI Pending Approval</label>
</ListView>